# botviejo1

./: .gitignore  .replit  BOT_STRUCTURE.md  adaptive_weighting.py  app.py  apply_main1_fix.py  bot_cli.py  bot_structure.txt  check_balance.py  config.env  config.example.env  copy_trading_modules.py  debug_env.py  demo_analysis.py  demo_pattern_analysis.py  demo_scalping.py  demo_short_trading.py  demo_smart_trading.py  demo_strategy_test.py  ejemplo_learning_data.json  export_local_setup.py  final_test.py  fix_all_subscriptions.py  fix_candles.py  fix_direct_subscriptions.py  fix_main1.py  indicator_weighting.py  learning_data.json  log_viewer.py  main.py  main1.py  market_data.db  modulo.py  modulo1.py  modulo2.py  modulocola.py  pendientes_modo_real.txt  pyproject.toml  requirements.txt  run_bot.py  (+18 more)
adaptive_system/: __init__.py
api_client/: modulo2.py
attached_assets/: Pasted--Hola-La-estructura-de-tu-bot-se-ve-bastante-bien-organizada-y-f-cil-de-seguir-Aqu-tienes-algunos-1746678187512.txt  Pasted--Programador-cripto-Gem-personalizada-Esta-es-la-informaci-n-cr-tica-que-necesit-bamos-Excelente-1749007864486.txt  Pasted--rs-avg-gain-avg-loss-indicators-rsi-100-100-1-rs--1746674138223.txt  Pasted-1-Velocidad-y-Latencia-Cr-tico-en-Solana-Conexi-n-de-baja-latencia-Usa-servidores-se-acerc-1746682665163.txt  Pasted-Entiendo-que-quieres-hablar-sobre-la-configuraci-n-de-la-API-y-asegurarte-de-que-el-bot-se-conecte-a-1748146377997.txt  Pasted-Grok-El-scalping-en-Solana-o-cualquier-criptomoneda-implica-realizar-operaciones-r-pidas-de-compra-1746681943499.txt  (+2 more)
(+135 files in other folders)
